<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/butt_info_our_kind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_kind" />

    <Button
        android:id="@+id/butt_info_our_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_age" />

    <Button
        android:id="@+id/butt_info_our_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_area" />

</LinearLayout>