<?xml version="1.0" encoding="utf-8"?>
<!-- <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/maincontainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main">

    <Button
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_info_config" />

    <Button
        android:id="@+id/create"
        android:layout_width="230dp"
        android:layout_height="390dp"
        android:layout_gravity="bottom|left"
        android:background="@drawable/main_create_config" />

    <Button
        android:id="@+id/config"
        android:layout_width="212dp"
        android:layout_height="136dp"
        android:layout_gravity="bottom|right"
        android:background="@drawable/main_config_config" />

</FrameLayout> -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/maincontainer"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main" 
    android:padding="0dp"
    android:layout_margin="0dp"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/container1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="top"
        android:layout_margin="0dp"
        android:padding="0dp"
        android:weightSum="1">

        <Button
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:text="@string/information" />

        <Button
            android:id="@+id/create"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:text="@string/show" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/container1"
        android:orientation="horizontal"
        android:weightSum="1" >

        <Button
            android:id="@+id/show"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/create" />

        <Button
            android:id="@+id/config"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/config" />
    </LinearLayout>

</RelativeLayout>