<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/infoButt"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/info_short" />

        <Button
            android:id="@+id/createButt"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/create_short" />

        <Button
            android:id="@+id/showButt"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/show_short" />

        <Button
            android:id="@+id/configButt"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/config_short" />
    </LinearLayout>

    
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/basic" >

        <!-- fragment -->
        <fragment
            android:id="@+id/info_main"
            android:name="net.julnamoo.swm.herimarque.info.InfoMainFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <fragment
            android:id="@+id/create_main"
            android:name="net.julnamoo.swm.herimarque.create.CreateMainFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        
        <fragment
            android:id="@+id/show_main"
            android:name="net.julnamoo.swm.herimarque.show.ShowMainFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        
        <fragment
            android:id="@+id/config_main"
            android:name="net.julnamoo.swm.herimarque.config.ConfigMainFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

</LinearLayout>